src/components/PreviewCard/module.PreviewCard.scss
.columns {
  &.container {
    display: block;
    margin: 0 auto;
  }
  column-gap: 10px;
  column-count: 3;
  @media (max-width: 768px) {
    column-count: 2;
    font-size: 0.6em;
  }
  .preview {
    break-inside: avoid;
    display: block;
    padding: 0 0 10px 0;
    display: flex;
    flex-direction: column;
    position: relative;
    cursor: pointer;
    .detail.withAtts {
      opacity: 1;
      padding-bottom: 15px;
    }
    img {
      max-width: 100%;
    }
    .detail {
      transition: all 0.5s;
      padding: 10px;
      position: absolute;
      background: #0000008a;
      bottom: 0;
      color: #fff;
      opacity: 0;
      margin-bottom: 10px;
      width: calc(100% - 20px);
      p {
        margin: 0;
        font-size: 1.5em;
        & + p {
          font-size: 1.2em;
          line-height: 1.2em;
        }
      }
    }
  }
}

